adding signup link to the navbar

--- a/views/layouts/navbar.gohtml
+++ b/views/layouts/navbar.gohtml
@@ -11,10 +11,13 @@
       <a class="navbar-brand" href="/">Lens Locked</a>
     </div>
 
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <div class="collapse navbar-collapse" id="navbar">
       <ul class="nav navbar-nav">
         <li><a href="/">Home</a></li>
         <li><a href="/contact">Contact</a></li>
+      </ul>
+            <ul class="nav navbar-nav navbar-right">
+            <li><a href="/signup">Sign Up</a></li>
       </ul>
     </div>
   </div>
